--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,23 @@ fast_finish: true
 
 python:
   - 2.7
+  - 3.6
   - 3.7-dev
 
 os:
   - linux
-  
-notifications:
-  email: false
+
+group: travis_latest
 
 git:
   depth: 3
 
 
-before_install:
-    - pip -q install coveralls
-
 install: pip install -e .
 
-script: coverage run tests/test.py -v
+script: pytest -v
 
-after_success: coveralls
+after_success: 
+  - coverage run tests/test_all.py
+  - coveralls
 
