--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 fast_finish: true
 
 python:
-  - 2.7
+  - 3.5
   - 3.6
   - 3.7-dev
 
@@ -15,11 +15,16 @@ git:
   depth: 3
 
 
-install: pip install -e .
+install: pip install -e .[tests]
 
-script: pytest -v
+script: 
+  - pytest -sv
+  - flake8
+  - mypy . --ignore-missing-imports
 
 after_success: 
-  - coverage run tests/test_all.py
-  - coveralls
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
+    pytest --cov;
+    coveralls;
+    fi
 
