--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,7 @@
 [metadata]
 name = maidenhead
-description-file = README.md
-version = 1.1.4
-description = Maidenhead Locator
+version = 1.1.5
+description = Maidenhead Locator <-> Lat Lon coordinate convertor
 author = 
   Michael Hirsch
   Henri Kuiper
@@ -12,6 +11,7 @@ keywords =
   maidenhead
 classifiers =
   Development Status :: 4 - Beta
+  Environment :: Console
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Topic :: Scientific/Engineering :: GIS
@@ -29,13 +29,11 @@ install_requires =
 tests = 
   pytest
   pytest-cov
-  coveralls 
+  coveralls
   flake8
   mypy
-  
+
 [flake8]
 max-line-length = 132
 exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
-
-
 
