--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = maidenhead
-version = 1.1.5
-description = Maidenhead Locator <-> Lat Lon coordinate convertor
+version = 1.1.5a
+description = Maidenhead Locator, Lat Lon coordinate convertor
 author = 
   Michael Hirsch
   Henri Kuiper
@@ -23,7 +23,6 @@ scripts = Maidenhead.py
 [options]
 include_package_data = True
 packages = find:
-install_requires =
 
 [options.extras_require]
 tests = 
