--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,8 @@
 [metadata]
 name = maidenhead
-version = 1.1.5a
+version = 1.1.6
 description = Maidenhead Locator, Lat Lon coordinate convertor
-author = 
-  Michael Hirsch
-  Henri Kuiper
+author = Michael Hirsch; Henri Kuiper
 url = https://github.com/scivision/maidenhead
 keywords = 
   location
