--- a/setup.cfg
+++ b/setup.cfg
@@ -1,36 +1,66 @@
 [metadata]
 name = maidenhead
 version = 1.1.6
-description = Maidenhead Locator, Lat Lon coordinate convertor
 author = Michael Hirsch; Henri Kuiper
+description = Maidenhead Locator, Lat Lon coordinate convertor
 url = https://github.com/scivision/maidenhead
-keywords = 
+keywords =
   location
   maidenhead
 classifiers =
   Development Status :: 4 - Beta
   Environment :: Console
+  Operating System :: OS Independent
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Topic :: Scientific/Engineering :: GIS
+license_file = LICENSE
 long_description = file: README.md
 long_description_content_type = text/markdown
-license_file = LICENSE
-scripts = Maidenhead.py
 
 [options]
+python_requires = >= 3.6
+setup_requires =
+  setuptools >= 38.6
+  pip >= 10
+  twine >= 1.11
 include_package_data = True
 packages = find:
+install_requires =
 
 [options.extras_require]
-tests = 
+tests =
   pytest
   pytest-cov
   coveralls
   flake8
   mypy
 
+[options.entry_points]
+console_scripts =
+  Maidenhead = Maidenhead:main
+
 [flake8]
 max-line-length = 132
-exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
+exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
 
+[coverage:run]
+cover_pylib = false
+omit =
+  /home/travis/virtualenv/*
+  */site-packages/*
+  */bin/*
+
+[coverage:report]
+exclude_lines =
+  pragma: no cover
+  def __repr__
+  except RuntimeError
+  except NotImplementedError
+  except ImportError
+  except FileNotFoundError
+  except CalledProcessError
+  logging.warning
+  logging.error
+  logging.critical
+  if __name__ == .__main__.:
