--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,30 @@
 language: python
-fast_finish: true
-
-python:
-  - 3.6
-  - 3.7-dev
-
-os:
-  - linux
-
+sudo: required
+dist: xenial
 group: travis_latest
 
 git:
   depth: 3
+  quiet: true
+
+python:
+- 3.6
+- 3.7
+
+os:
+- linux
 
 
 install: pip install -e .[tests]
 
-script: 
-  - pytest -sv
-  - flake8
-  - mypy . --ignore-missing-imports
+script:
+- pytest -rsv
+- flake8
+- mypy . --ignore-missing-imports
 
-after_success: 
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
-    pytest --cov;
-    coveralls;
-    fi
+after_success:
+- if [[ $TRAVIS_PYTHON_VERSION == 3.6* ]]; then
+  pytest --cov --cov-config=setup.cfg;
+  coveralls;
+  fi
 
