Move julia to own repo [skip ci]
py 35+

meta

meta

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maidenhead
-version = 1.2.0
+version = 1.2.1
 author = Michael Hirsch; Henri Kuiper
 description = Maidenhead Locator, Lat Lon coordinate convertor
 url = https://github.com/scivision/maidenhead
@@ -8,9 +8,12 @@ keywords =
   location
   maidenhead
 classifiers =
-  Development Status :: 4 - Beta
+  Development Status :: 5 - Production/Stable
   Environment :: Console
+  Intended Audience :: End Users/Desktop
+  Intended Audience :: Science/Research
   Operating System :: OS Independent
+  Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Topic :: Scientific/Engineering :: GIS
@@ -19,7 +22,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
-python_requires = >= 3.6
+python_requires = >= 3.5
 setup_requires =
   setuptools >= 38.6
   pip >= 10
@@ -31,6 +34,7 @@ install_requires =
 [options.extras_require]
 tests =
   pytest
+cov =
   pytest-cov
   coveralls
   flake8
@@ -43,24 +47,3 @@ console_scripts =
 [flake8]
 max-line-length = 132
 exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
-
-[coverage:run]
-cover_pylib = false
-omit =
-  /home/travis/virtualenv/*
-  */site-packages/*
-  */bin/*
-
-[coverage:report]
-exclude_lines =
-  pragma: no cover
-  def __repr__
-  except RuntimeError
-  except NotImplementedError
-  except ImportError
-  except FileNotFoundError
-  except CalledProcessError
-  logging.warning
-  logging.error
-  logging.critical
-  if __name__ == .__main__.:
