--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ classifiers =
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering :: GIS
 license_file = LICENSE
 long_description = file: README.md
@@ -43,7 +44,3 @@ cov =
 [options.entry_points]
 console_scripts =
   Maidenhead = Maidenhead:main
-
-[flake8]
-max-line-length = 132
-exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
