--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ group: travis_latest
 dist: xenial
 
 git:
-  depth: 3
+  depth: 25
   quiet: true
 
 python:
@@ -18,15 +18,15 @@ matrix:
     install: pip install -e .[tests,cov]
     script:
     - flake8
-    - mypy . --ignore-missing-imports
+    - mypy .
     after_success:
     - pytest --cov
     - coveralls
   - os: osx
-    language: sh
+    language: minimal
     install: pip3 install -e .[tests]
   - os: windows
-    language: sh
+    language: minimal
     before_install:
     - choco install python3
     - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
