--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ matrix:
     after_success:
     - pytest --cov
     - coveralls
-  - os: osx
-    language: minimal
-    install: pip3 install -e .[tests]
+#  - os: osx  # just saving travis resources
+#    language: minimal
+#    install: pip3 install -e .[tests]
  # - os: windows
   #  language: minimal
   #  before_install:
