--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,9 @@
 name = maidenhead
 version = 1.3.0
 author = Michael Hirsch; Henri Kuiper
+author_email = scivision@users.noreply.github.com
 description = Maidenhead Locator, Lat Lon coordinate convertor
-url = https://github.com/scivision/maidenhead
+url = https://github.com/space-physics/maidenhead
 keywords =
   location
   maidenhead
@@ -28,8 +29,9 @@ setup_requires =
   setuptools >= 38.6
   pip >= 10
   twine >= 1.11
-include_package_data = True
 packages = find:
+scripts =
+  Maidenhead.py
 install_requires =
 
 [options.extras_require]
