--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,8 @@ matrix:
     after_success:
     - pytest --cov
     - coveralls
-#  - os: osx  # just saving travis resources
-#    language: minimal
-#    install: pip3 install -e .[tests]
- # - os: windows
-  #  language: minimal
-  #  before_install:
-   # - choco install python3
-  #  - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
 
 install: pip install -e .[tests]
 
-script: pytest -rsv
+script: pytest -r a -v
 
