--- a/setup.cfg
+++ b/setup.cfg
@@ -19,16 +19,13 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering :: GIS
-license_file = LICENSE
+license_files =
+  LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
 python_requires = >= 3.5
-setup_requires =
-  setuptools >= 38.6
-  pip >= 10
-  twine >= 1.11
 packages = find:
 scripts =
   Maidenhead.py
