Set pytest as setuptools test runner

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[aliases]
+test=pytest
+
 [metadata]
 name = maidenhead
 version = 1.3.0
@@ -28,10 +31,14 @@ long_description_content_type = text/markdown
 python_requires = >= 3.5
 packages = find:
 install_requires =
+setup_requires = pytest-runner
+tests_require = pytest
 
 [options.extras_require]
 tests =
   pytest
+  pytest-cov
+  pytest-mock
 lint =
   flake8
   flake8-bugbear
