Change test runner Change script runner to CLI

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,4 +48,8 @@ lint =
 
 [options.entry_points]
 console_scripts =
-  Maidenhead = Maidenhead:main
+  maidenhead = maidenhead.cli:run
+
+[tool:pytest]
+addopts = -vv --cov maidenhead --cov tests --cov-report=term-missing
+
