--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,10 @@ python_requires = >= 3.5
 packages = find:
 install_requires =
 setup_requires = pytest-runner
-tests_require = pytest
+tests_require =
+  pytest
+  pytest-cov
+  pytest-mock
 
 [options.extras_require]
 tests =
