--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maidenhead
-version = 1.3.0
+version = 1.4.0
 author = Michael Hirsch; Henri Kuiper
 author_email = scivision@users.noreply.github.com
 description = Maidenhead Locator, Lat Lon coordinate convertor
@@ -32,6 +32,7 @@ install_requires =
 [options.extras_require]
 tests =
   pytest
+  pytest-mock
 lint =
   flake8
   flake8-bugbear
