use src/ package layout

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,11 @@ long_description_content_type = text/markdown
 python_requires = >= 3.5
 packages = find:
 install_requires =
+package_dir=
+    =src
+
+[options.packages.find]
+where=src
 
 [options.extras_require]
 tests =
