--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,26 +2,25 @@ name: ci
 
 on:
   push:
-    paths-ignore:
-    - "**/*.md"
-  pull_request:
-    paths-ignore:
-    - "**/*.md"
+    paths:
+    - "**/*.py"
 
 jobs:
 
   linux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+
     - run: pip install .[tests,lint]
+
     - run: flake8
     - run: mypy .
-    - run: pytest -r a -v
-      working-directory: tests
+
+    - run: pytest
 
   integration:
     runs-on: ${{ matrix.os }}
@@ -29,10 +28,11 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+
     - run: pip install .[tests]
-    - run: pytest -r a -v
-      working-directory: tests
+
+    - run: pytest
