--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,7 @@
 requires = ["setuptools", "wheel"]
 
 [tool.black]
-line-length = 99
+line-length = 100
+
+[tool.pytest.ini_options]
+addopts = "-ra -v"
