simplify test and cli

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maidenhead
-version = 1.4.0
+version = 1.4.1
 author = Michael Hirsch; Henri Kuiper
 author_email = scivision@users.noreply.github.com
 description = Maidenhead Locator, Lat Lon coordinate convertor
@@ -38,7 +38,6 @@ where=src
 [options.extras_require]
 tests =
   pytest
-  pytest-mock
 lint =
   flake8
   flake8-bugbear
@@ -48,4 +47,4 @@ lint =
 
 [options.entry_points]
 console_scripts =
-  maidenhead = maidenhead.cli:run
+  maidenhead = maidenhead.__main__:main
