--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = maidenhead
-version = 1.4.1
+version = 1.5.0
 author = Michael Hirsch; Henri Kuiper
 author_email = scivision@users.noreply.github.com
 description = Maidenhead Locator, Lat Lon coordinate convertor
@@ -14,11 +14,7 @@ classifiers =
   Intended Audience :: End Users/Desktop
   Intended Audience :: Science/Research
   Operating System :: OS Independent
-  Programming Language :: Python :: 3.5
-  Programming Language :: Python :: 3.6
-  Programming Language :: Python :: 3.7
-  Programming Language :: Python :: 3.8
-  Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3
   Topic :: Scientific/Engineering :: GIS
 license_files =
   LICENSE.txt
@@ -26,7 +22,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
-python_requires = >= 3.5
+python_requires = >= 3.6
 packages = find:
 install_requires =
 package_dir=
@@ -47,4 +43,4 @@ lint =
 
 [options.entry_points]
 console_scripts =
-  maidenhead = maidenhead.__main__:main
+  maidenhead = maidenhead.__main__:cli
