--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,14 @@
 [build-system]
 requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 100
 
-[tool.pytest.ini_options]
-addopts = "-ra -v"
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+files = ["src"]
+
+strict_optional = false
